--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,8 @@ jobs:
       - name: Set outputs
         id: set_outputs
         uses: actions/github-script@v7
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         with:
           script: |
             const repositoryName = context.payload.repository.name;
