--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,11 +99,7 @@ serde_json = "=1.0.120"
 serde_with = { version = "=3.9.0", features = ["chrono_0_4"] }
 slug = "=0.1.5"
 strum = { version = "=0.26.2", features = ["derive"] }
-# FIXME: Upgrade once https://github.com/seanmonstar/reqwest/pull/1620 is merged
-reqwest = { git = "https://github.com/thomasqueirozb/reqwest", branch = "base_url", features = [
-    "json",
-    "stream",
-] }
+reqwest = { version = "=0.12.7", features = ["json", "stream"] }
 tokio = { version = "=1.39.2", features = ["full"] }
 tracing = { version = "=0.1.40", features = ["attributes"] }
 uuid = { version = "=1.10.0", features = ["v4"], default-features = false }
