--- a/crates/services/user/Cargo.toml
+++ b/crates/services/user/Cargo.toml
@@ -10,6 +10,7 @@ async-graphql = { workspace = true }
 application-utils = { path = "../../utils/application" }
 background = { path = "../../background" }
 common-models = { path = "../../models/common" }
+common-utils = { path = "../../utils/common" }
 config = { path = "../../config" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
