feat(services): new calculation for daily user activities

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ dotenvy_macro = "=0.15.7"
 enum_meta = "=0.7.0"
 itertools = "=0.13.0"
 futures = "=0.3.30"
+hashbag = "=0.1.12"
 markdown = "=1.0.0-alpha.18"
 nanoid = "=0.4.0"
 openidconnect = "=3.5.0"
