--- a/crates/models/media/Cargo.toml
+++ b/crates/models/media/Cargo.toml
@@ -16,6 +16,7 @@ sea-orm = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
+strum = { workspace = true }
 
 [package.metadata.cargo-machete]
 ignored = ["serde_json"]
