--- a/crates/services/user/Cargo.toml
+++ b/crates/services/user/Cargo.toml
@@ -9,6 +9,7 @@ argon2 = { workspace = true }
 async-graphql = { workspace = true }
 application-utils = { path = "../../utils/application" }
 background = { path = "../../background" }
+chrono = { workspace = true }
 common-models = { path = "../../models/common" }
 common-utils = { path = "../../utils/common" }
 config = { path = "../../config" }
