--- a/crates/services/notification/Cargo.toml
+++ b/crates/services/notification/Cargo.toml
@@ -15,3 +15,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tracing = { workspace = true }
 user-models = { path = "../../models/user" }
+
+[package.metadata.cargo-machete]
+ignored = ["tracing"]
