--- a/crates/services/user/Cargo.toml
+++ b/crates/services/user/Cargo.toml
@@ -9,6 +9,7 @@ argon2 = { workspace = true }
 async-graphql = { workspace = true }
 application-utils = { path = "../../utils/application" }
 background = { path = "../../background" }
+chrono = { workspace = true }
 common-models = { path = "../../models/common" }
 common-utils = { path = "../../utils/common" }
 config = { path = "../../config" }
@@ -28,3 +29,6 @@ serde_json = { workspace = true }
 sea-orm = { workspace = true }
 tracing = { workspace = true }
 user-models = { path = "../../models/user" }
+
+[package.metadata.cargo-machete]
+ignored = ["tracing"]
