--- a/crates/traits/Cargo.toml
+++ b/crates/traits/Cargo.toml
@@ -15,3 +15,6 @@ database-models = { path = "../models/database" }
 media-models = { path = "../models/media" }
 sea-orm = { workspace = true }
 tracing = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["tracing"]
