--- a/crates/providers/Cargo.toml
+++ b/crates/providers/Cargo.toml
@@ -36,3 +36,6 @@ serde_with = { workspace = true }
 strum = { workspace = true }
 tracing = { workspace = true }
 traits = { path = "../traits" }
+
+[package.metadata.cargo-machete]
+ignored = ["tracing"]
