--- a/crates/services/fitness/Cargo.toml
+++ b/crates/services/fitness/Cargo.toml
@@ -31,4 +31,4 @@ slug = { workspace = true }
 tracing = { workspace = true }
 
 [package.metadata.cargo-machete]
-ignored = ["rust_decimal"]
+ignored = ["rust_decimal", "tracing"]
