--- a/crates/services/importer/Cargo.toml
+++ b/crates/services/importer/Cargo.toml
@@ -42,3 +42,6 @@ specific-models = { path = "../../models/specific" }
 tracing = { workspace = true }
 traits = { path = "../../traits" }
 user-models = { path = "../../models/user" }
+
+[package.metadata.cargo-machete]
+ignored = ["tracing"]
