--- a/crates/services/statistics/Cargo.toml
+++ b/crates/services/statistics/Cargo.toml
@@ -15,3 +15,6 @@ rust_decimal = { workspace = true }
 sea-orm = { workspace = true }
 serde = { workspace = true }
 tracing = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["tracing"]
