--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -69,6 +69,7 @@
 		"@types/react": "18.3.4",
 		"@types/react-dom": "18.3.0",
 		"@types/uuid": "10.0.0",
+		"filesize": "10.1.4",
 		"postcss": "8.4.41",
 		"postcss-preset-mantine": "1.17.0",
 		"postcss-simple-vars": "7.0.1",
