--- a/crates/services/exporter/Cargo.toml
+++ b/crates/services/exporter/Cargo.toml
@@ -8,11 +8,12 @@ apalis = { workspace = true }
 async-graphql = { workspace = true }
 background = { path = "../../background" }
 chrono = { workspace = true }
+config = { path = "../../config" }
 common-models = { path = "../../models/common" }
 common-utils = { path = "../../utils/common" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
-config = { path = "../../config" }
+enums = { path = "../../enums" }
 file-storage-service = { path = "../file-storage" }
 fitness-models = { path = "../../models/fitness" }
 media-models = { path = "../../models/media" }
@@ -20,7 +21,6 @@ mime_guess = "=2.0.5"
 nanoid = { workspace = true }
 reqwest = { workspace = true }
 sea-orm = { workspace = true }
-serde_json = { workspace = true }
 struson = { version = "=0.5.0", features = ["serde"] }
 tokio = { workspace = true }
 tokio-util = { version = "=0.7.11", features = ["codec"] }
