ci: extract reverse proxy urls to variables

--- a/ci/Caddyfile
+++ b/ci/Caddyfile
@@ -4,12 +4,17 @@
 }
 
 :{$PORT:8000} {
+	vars {
+		frontend_url "127.0.0.1:3000"
+		backend_url "127.0.0.1:5000"
+	}
+
 	handle_path /_i/* {
 		rewrite * /webhooks/integrations{path}
-		reverse_proxy 127.0.0.1:5000
+		reverse_proxy {vars.backend_url}
 	}
 	handle_path /backend* {
-		reverse_proxy 127.0.0.1:5000
+		reverse_proxy {vars.backend_url}
 	}
 	handle /health {
 		header Content-Type text/plain
