Public read-only accessibility (#25)
* feat(migrations): add column for `is_account_default` boolean column

* feat(models): add new attribute to fit to database schema

* feat(backend): allow creating account default access link

* feat(frontend): create access link correctly

* feat(frontend): allow creating default access links

* refactor(frontend): remove useless equality check

* fix(frontend): remove useless attribute

* feat(backend): new schema for process access link input

* feat(backend): allow process username based access links

* ci: add entry for account default access links

* feat(frontend): allow processing account access links

* perf(services/user): add filters on the query level

* chore(frontend): remove useless code

* ci: use new reverse proxy vars

--- a/ci/Caddyfile
+++ b/ci/Caddyfile
@@ -13,9 +13,13 @@
 		rewrite * /webhooks/integrations{path}
 		reverse_proxy {vars.backend_url}
 	}
+	handle_path /u/* {
+		rewrite * /api/sharing{path}?isAccountDefault=true
+		reverse_proxy {vars.frontend_url}
+	}
 	handle_path /_s/* {
 		rewrite * /api/sharing{path}
-		reverse_proxy 127.0.0.1:3000
+		reverse_proxy {vars.frontend_url}
 	}
 	handle_path /backend* {
 		reverse_proxy {vars.backend_url}
