--- a/crates/services/integration/Cargo.toml
+++ b/crates/services/integration/Cargo.toml
@@ -5,9 +5,14 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
+apalis = { workspace = true }
 application-utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
+background = { path = "../../background" }
+chrono = { workspace = true }
+common-models = { path = "../../models/common" }
 common-utils = { path = "../../utils/common" }
+config = { path = "../../config" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
 enums = { path = "../../enums" }
