--- a/crates/services/importer/Cargo.toml
+++ b/crates/services/importer/Cargo.toml
@@ -11,6 +11,7 @@ async-graphql = { workspace = true }
 background = { path = "../../background" }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
+config = { path = "../../config" }
 convert_case = { workspace = true }
 csv = "=1.3.0"
 data-encoding = "=2.6.0"
@@ -20,6 +21,7 @@ common-utils = { path = "../../utils/common" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
 dependent-models = { path = "../../models/dependent" }
+dependent-utils = { path = "../../utils/dependent" }
 enums = { path = "../../enums" }
 fitness-models = { path = "../../models/fitness" }
 fitness-service = { path = "../../services/fitness" }
