--- a/crates/utils/dependent/Cargo.toml
+++ b/crates/utils/dependent/Cargo.toml
@@ -18,9 +18,12 @@ enums = { path = "../../enums" }
 itertools = { workspace = true }
 media-models = { path = "../../models/media" }
 providers = { path = "../../providers" }
+rust_decimal = { workspace = true }
+rust_decimal_macros = { workspace = true }
 sea-orm = { workspace = true }
 tracing = { workspace = true }
 traits = { path = "../../traits" }
+user-models = { path = "../../models/user" }
 
 [package.metadata.cargo-machete]
 ignored = ["tracing"]
