--- a/crates/services/importer/Cargo.toml
+++ b/crates/services/importer/Cargo.toml
@@ -9,6 +9,7 @@ apalis = { workspace = true }
 application-utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
 background = { path = "../../background" }
+cached = { workspace = true }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
 config = { path = "../../config" }
@@ -29,7 +30,6 @@ flate2 = "=1.0.33"
 importer-models = { path = "../../models/importer" }
 itertools = { workspace = true }
 media-models = { path = "../../models/media" }
-miscellaneous-service = { path = "../../services/miscellaneous" }
 providers = { path = "../../providers" }
 regex = { workspace = true }
 reqwest = { workspace = true }
