--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
-  ryot-pro-app:
+  ryot-app:
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ..:/workspaces/ryot-pro:cached
+      - ..:/workspaces/ryot:cached
     command: sleep infinity
     ports:
       - "8000:8000"
@@ -12,25 +12,25 @@ services:
       - "5000:5000"
     user: archlinux
 
-  ryot-pro-minio:
+  ryot-minio:
     image: minio/minio
     ports:
       - "9000:9000"
       - "9001:9001"
     volumes:
-      - ryot_pro_minio_storage:/data
+      - ryot_minio_storage:/data
     command: server --console-address ":9001" /data
 
-  ryot-pro-postgres:
+  ryot-postgres:
     image: postgres:16-alpine
     restart: unless-stopped
     volumes:
-      - ryot_pro_postgres_storage:/var/lib/postgresql/data
+      - ryot_postgres_storage:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: postgres
 
 volumes:
-  ryot_pro_minio_storage:
-  ryot_pro_postgres_storage:
+  ryot_minio_storage:
+  ryot_postgres_storage:
