--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -21,6 +21,7 @@ collection-service = { path = "../../crates/services/collection" }
 common-utils = { path = "../../crates/utils/common" }
 config = { path = "../../crates/config" }
 database-models = { path = "../../crates/models/database" }
+dependent-models = { path = "../../crates/models/dependent" }
 dotenvy = "=0.15.7"
 exporter-resolver = { path = "../../crates/resolvers/exporter" }
 exporter-service = { path = "../../crates/services/exporter" }
@@ -40,13 +41,14 @@ miscellaneous-service = { path = "../../crates/services/miscellaneous" }
 openidconnect = { workspace = true }
 reqwest = { workspace = true }
 router-resolver = { path = "../../crates/resolvers/router" }
-statistics-resolver = { path = "../../crates/resolvers/statistics" }
-statistics-service = { path = "../../crates/services/statistics" }
 sea-orm = { workspace = true }
 sea-orm-migration = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
+schematic = { workspace = true }
+statistics-resolver = { path = "../../crates/resolvers/statistics" }
+statistics-service = { path = "../../crates/services/statistics" }
 tokio = { workspace = true }
 tower = { version = "=0.4.13", features = ["buffer"] }
 tower-http = { version = "=0.5.2", features = ["catch-panic", "cors", "trace"] }
