--- a/crates/utils/common/Cargo.toml
+++ b/crates/utils/common/Cargo.toml
@@ -8,7 +8,5 @@ chrono = { workspace = true }
 compile-time = "=0.2.0"
 const-str = { workspace = true }
 dotenvy_macro = { workspace = true }
+env-utils = { path = "../env" }
 reqwest = { workspace = true }
-
-[build-dependencies]
-dotenv-build = "0.1.1"
