--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 common-utils = { path = "../utils/common" }
+env-utils = { path = "../utils/env" }
 schematic = { workspace = true }
 serde = { workspace = true }
