--- a/crates/models/fitness/Cargo.toml
+++ b/crates/models/fitness/Cargo.toml
@@ -8,11 +8,7 @@ application-utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
 async-trait = { workspace = true }
 common-models = { path = "../../models/common" }
-derive_more = { version = "=1.0.0", features = [
-  "add",
-  "sum",
-  "add_assign",
-], default-features = false }
+derive_more = { workspace = true }
 enums = { path = "../../enums" }
 file-storage-service = { path = "../../services/file-storage" }
 rust_decimal = { workspace = true }
