--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -174,6 +174,7 @@ jobs:
           APP_VERSION: ${{ steps.build.outputs.version }}
           DEFAULT_TMDB_ACCESS_TOKEN: ${{ secrets.DEFAULT_TMDB_ACCESS_TOKEN }}
           DEFAULT_MAL_CLIENT_ID: ${{ secrets.DEFAULT_MAL_CLIENT_ID }}
+          TRAKT_CLIENT_ID: ${{ secrets.TRAKT_CLIENT_ID }}
           UNKEY_API_ID: ${{ secrets.UNKEY_API_ID }}
         run: |
           ${{ matrix.platform.command }} build --locked --target ${{ matrix.platform.target }} --release
