--- a/crates/services/fitness/Cargo.toml
+++ b/crates/services/fitness/Cargo.toml
@@ -22,6 +22,7 @@ file-storage-service = { path = "../../services/file-storage" }
 fitness-models = { path = "../../models/fitness" }
 itertools = { workspace = true }
 migrations = { path = "../../migrations" }
+nanoid = { workspace = true }
 reqwest = { workspace = true }
 sea-orm = { workspace = true }
 sea-query = { workspace = true }
