--- a/crates/utils/application/Cargo.toml
+++ b/crates/utils/application/Cargo.toml
@@ -13,4 +13,5 @@ common-utils = { path = "../common" }
 config = { path = "../../config" }
 file-storage-service = { path = "../../services/file-storage" }
 jwt-service = { path = "../../services/jwt" }
+moka = { workspace = true }
 reqwest = { workspace = true }
