feat(services): add new crate for caching service

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ members = [
     "crates/resolvers/statistics",
     "crates/resolvers/router",
     "crates/resolvers/user",
+    "crates/services/cache",
     "crates/services/collection",
     "crates/services/exporter",
     "crates/services/file-storage",
