Move seen cache to database (#1053)
* fix(backend): no debug display

* feat(migrations): create table for application cache

* feat(services): add new crate for caching service

* feat(backend): add cache service to misc

* feat(models): generate entity for application cache

* fix(models): bring back functions mod

* fix(models): bring back monitored_entity mod

* feat(models): add correct type for key

* fix(migrations): make key of application cache unique

* feat(services/cache): function to update cache

* feat(services/cache): add other basic functions

* feat(services/misc): use new caching mechanism

* fix(services/cache): set created_at manually

* feat(backend): delete expired application caches

* chore(models): order of deps

* ci: Run CI

* feat(models): do not serialize none values

* chore(services/misc): change order of attributes

* fix(backend): change position of custom derive

--- a/crates/services/miscellaneous/Cargo.toml
+++ b/crates/services/miscellaneous/Cargo.toml
@@ -8,6 +8,7 @@ apalis = { workspace = true }
 application-utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
 background = { path = "../../background" }
+cache-service = { path = "../cache" }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
 common-models = { path = "../../models/common" }
@@ -16,7 +17,6 @@ config = { path = "../../config" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
 dependent-models = { path = "../../models/dependent" }
-derive_more = { workspace = true }
 enums = { path = "../../enums" }
 env-utils = { path = "../../utils/env" }
 file-storage-service = { path = "../../services/file-storage" }
