--- a/crates/models/common/Cargo.toml
+++ b/crates/models/common/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 async-graphql = { workspace = true }
 enums = { path = "../../enums" }
 enum_meta = { workspace = true }
+rust_decimal = { workspace = true }
 schematic = { workspace = true }
 sea-orm = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_with = { workspace = true }
 strum = { workspace = true }
